<resources>
    <string name="app_name">koreanlearning</string>
    <string name="selection_fragment">Selection</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="section1">About Korea</string>
    <string name="section2">Learning Korean</string>
    <string name="section3">Quizzes</string>
    <string name="section4">Games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="korean_word">Korean word</string>
    <string name="button">Button</string>
    <string name="congratulations">Congratulations</string>
    <string name="welcome">Welcome</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_signup">Sign up</string>
    <string name="welcomeimage">Welcome Image</string>

    <string name="hint_email">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="btn_login">Login</string>
    <string name="text_signup">Need Sign Up?</string>
    <string name="text_signin">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>

</resources>

